--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@opentelemetry/exporter-metrics-otlp-proto": "^0.207.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.207.0",
     "@opentelemetry/instrumentation-graphql": "^0.55.0",
+    "@opentelemetry/resources": "^2.2.0",
     "@opentelemetry/sdk-metrics": "^2.2.0",
     "@opentelemetry/sdk-node": "^0.207.0",
     "@opentelemetry/sdk-trace-node": "^2.2.0",
+    "@opentelemetry/semantic-conventions": "^1.37.0",
     "apollo-server": "^3.13.0",
     "graphql": "^16.12.0"
   },
