--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@opentelemetry/sdk-trace-node": "^2.2.0",
     "@opentelemetry/semantic-conventions": "^1.37.0",
     "apollo-server": "^3.13.0",
-    "graphql": "^16.12.0"
+    "graphql": "^16.12.0",
+    "winston": "^3.18.3"
   },
   "description": "",
   "devDependencies": {
