--- a/collector-config.yaml
+++ b/collector-config.yaml
@@ -57,6 +57,17 @@ processors:
     send_batch_size: 1024
     send_batch_max_size: 2048
 
+  resource:
+    attributes:
+      - key: service.namespace
+        value: node-apollo
+        action: upsert
+      - key: deployment.environment
+        value: local
+        action: upsert
+      - key: service.name
+        action: delete
+
 exporters:
   debug:
     verbosity: detailed
@@ -65,13 +76,13 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [memory_limiter, batch]
+      processors: [memory_limiter, resource, batch]
       exporters: [debug]
     metrics:
       receivers: [otlp]
-      processors: [memory_limiter, batch]
+      processors: [memory_limiter, resource, batch]
       exporters: [debug]
     logs:
       receivers: [filelog]
-      processors: [memory_limiter, batch]
+      processors: [memory_limiter, resource, batch]
       exporters: [debug]
