--- a/collector-config.yaml
+++ b/collector-config.yaml
@@ -53,7 +53,7 @@ processors:
     spike_limit_mib: 100
 
   batch:
-    timeout: 5s
+    timeout: 2s
     send_batch_size: 1024
     send_batch_max_size: 2048
 
@@ -68,6 +68,16 @@ processors:
       - key: service.name
         action: delete
 
+  attributes:
+    actions:
+      - key: password
+        action: delete
+      - key: useremail
+        action: hash
+      - key: collector.attribute
+        value: collector-value
+        action: insert
+
 exporters:
   debug:
     verbosity: detailed
@@ -76,13 +86,13 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [memory_limiter, resource, batch]
+      processors: [memory_limiter, resource, attributes, batch]
       exporters: [debug]
     metrics:
       receivers: [otlp]
-      processors: [memory_limiter, resource, batch]
+      processors: [memory_limiter, resource, attributes, batch]
       exporters: [debug]
     logs:
       receivers: [filelog]
-      processors: [memory_limiter, resource, batch]
+      processors: [memory_limiter, resource, attributes, batch]
       exporters: [debug]
