filter processor span

--- a/collector-config.yaml
+++ b/collector-config.yaml
@@ -78,6 +78,14 @@ processors:
         value: collector-value
         action: insert
 
+  filter:
+    error_mode: ignore
+    traces:
+      span:
+        - 'name == "graphql-query"'
+      spanevent:
+        - 'attributes["value"] == 0'
+
 exporters:
   debug:
     verbosity: detailed
@@ -86,13 +94,13 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [memory_limiter, resource, attributes, batch]
+      processors: [memory_limiter, resource, attributes, filter, batch]
       exporters: [debug]
     metrics:
       receivers: [otlp]
-      processors: [memory_limiter, resource, attributes, batch]
+      processors: [memory_limiter, resource, attributes, filter, batch]
       exporters: [debug]
     logs:
       receivers: [filelog]
-      processors: [memory_limiter, resource, attributes, batch]
+      processors: [memory_limiter, resource, attributes, filter, batch]
       exporters: [debug]
