--- a/collector-config.yaml
+++ b/collector-config.yaml
@@ -78,13 +78,18 @@ processors:
         value: collector-value
         action: insert
 
-  filter:
+  filter: #https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/pkg/ottl/ottlfuncs#converters
     error_mode: ignore
     traces:
       span:
         - 'name == "graphql-query"'
       spanevent:
         - 'attributes["value"] == 0'
+    metrics:
+      metric:
+        - 'name != "request-count"'
+      datapoint:
+        - 'value_double < 2'
 
 exporters:
   debug:
