--- a/collector-config.yaml
+++ b/collector-config.yaml
@@ -109,6 +109,8 @@ exporters:
   otlphttp:
     endpoint: http://localhost:4318
     encoding: json
+  googlecloud:
+    project: fake-project
 
 service:
   pipelines:
